--- a/templates/search.html
+++ b/templates/search.html
@@ -1,22 +1,28 @@
-<nav class="navbar">
-    <div class="navdiv">			
-        <div class="col-sm-8 col-md-5">
-            <form class="navbar-form" role="search">
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search" name="q">
-                <div class="input-group-btn">
-                    <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                </div>
-            </div>
-            </form>
-        </div>
+<script type="text/javascript">
+    // Function to filter the table rows based on the search input
+    function filterTable() {
+        var input, filter, table, tr, td, i, txtValue;
+        input = document.getElementById("searchInput");
+        filter = input.value.toLowerCase();
+        table = document.querySelector(".table-striped");
+        tr = table.querySelectorAll("tr");
 
-        <ul>
-            <li><a href="/">Students</a></li>
-            <li><a href="/course">Courses</a></li>
-            <li><a href="/college">Colleges</a></li>
-            <button><a href="#">Logout</a></button>
-        </ul>
+        for (i = 0; i < tr.length; i++) {
+            td = tr[i].querySelectorAll("td");
+            for (var j = 0; j < td.length; j++) {
+                if (td[j]) {
+                    txtValue = td[j].textContent || td[j].innerText;
+                    if (txtValue.toLowerCase().indexOf(filter) > -1) {
+                        tr[i].style.display = "";
+                        break; // Show the row and move to the next row
+                    } else {
+                        tr[i].style.display = "none"; // Hide the row if it doesn't match the search
+                    }
+                }
+            }
+        }
+    }
 
-    </div>
-</nav>
+    // Add an event listener to the search input to trigger the filtering
+    document.getElementById("searchInput").addEventListener("input", filterTable);
+</script>
