Modified <form action = url_for  added the 'student.'

--- a/app/templates/course.html
+++ b/app/templates/course.html
@@ -62,7 +62,7 @@
                         <h4 class="modal-title">Please update Data</h4>
                     </div>
                     <div class="modal-body">
-                        <form action="{{url_for('update_course')}}" method="POST">
+                        <form action="{{url_for('student.update_course')}}" method="POST">
                             
                             <div  class="form-group">
 
@@ -119,7 +119,7 @@
                         <h4 class="modal-title">Please insert Data</h4>
                     </div>
                     <div class="modal-body">
-                        <form action="{{url_for('insert_course')}}" method="POST">
+                        <form action="{{url_for('student.insert_course')}}" method="POST">
 
                             <div  class="form-group">
 
