--- a/app/templates/student.html
+++ b/app/templates/student.html
@@ -73,7 +73,7 @@
                         <h4 class="modal-title">Please update Data</h4>
                     </div>
                     <div class="modal-body">
-                        <form action="{{url_for('update')}}" method="POST">
+                        <form action="{{url_for('student.update')}}" method="POST">
                             
                             <div  class="form-group">
 
@@ -156,7 +156,7 @@
                         <h4 class="modal-title">Please insert Data</h4>
                     </div>
                     <div class="modal-body">
-                        <form action="{{url_for('insert')}}" method="POST">
+                        <form action="{{url_for('student.insert')}}" method="POST">
 
                             <div  class="form-group">
 
