Modified student_bp and added the 'student_bp.' to the url_for actions

--- a/app/templates/college.html
+++ b/app/templates/college.html
@@ -59,7 +59,7 @@
                         <h4 class="modal-title">Please update Data</h4>
                     </div>
                     <div class="modal-body">
-                        <form action="{{url_for('student.update_college')}}" method="POST">
+                        <form action="{{url_for('student_bp.update_college')}}" method="POST">
                             
                             <div  class="form-group">
 
@@ -107,7 +107,7 @@
                         <h4 class="modal-title">Please insert Data</h4>
                     </div>
                     <div class="modal-body">
-                        <form action="{{url_for('student.insert_college')}}" method="POST">
+                        <form action="{{url_for('student_bp.insert_college')}}" method="POST">
 
                             <div  class="form-group">
 
