Added table an ID for css ref

--- a/app/templates/college.html
+++ b/app/templates/college.html
@@ -24,7 +24,8 @@
                         {% endif %}
                         {% endwith %}
 
-                <table class="table table-striped">                    	
+                <table class="table table-striped">  
+                    <div id ="stud-table"></div>                  	
                     <tr>
                         <th>Code</th>
                         <th>Name</th>
