--- a/app/templates/student.html
+++ b/app/templates/student.html
@@ -4,9 +4,9 @@
 
         <div class="container">
             <div class="row">
-                <div class="col md-12">
+                <div class="col-md-10 col-md-offset-1">
                     <h3>STUDENT LIST<button type="button" class="btn btn-success pull-right" data-toggle="modal" data-target="#mymodal">Add Data</button></h3>
-        </div>
+                    </div>
 
 
                     {% with messages = get_flashed_messages() %}
