--- a/app/templates/course.html
+++ b/app/templates/course.html
@@ -3,7 +3,7 @@
     {% include "base.html" %}
         <div class="container">
             <div class="row">
-                <div class="col md-12">
+                <div class="col-md-10 col-md-offset-1">
                     <h3>COURSE LIST <button type="button" class="btn btn-success pull-right" data-toggle="modal" data-target="#mymodal">Add Data</button></h3>
                 
                     {% with messages = get_flashed_messages() %}
