--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -244,19 +244,13 @@ button a{
     color: white; font-weight: bold; font-size: 15px;
 }
 
-
-#table-container {
-
-    background: rgba(255,255,255,0.5);
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
-
-}
+th.cog-header {
+   text-align: center;
+ }
 
 #stud-table {
     margin-top: 20px;
     margin-bottom: 10px;
-
 }
 
 #custom-search-input {
