--- a/app/templates/college.html
+++ b/app/templates/college.html
@@ -24,13 +24,13 @@
                         {% endif %}
                         {% endwith %}
 
-                <table class="table table-striped">  
+                <table class="table table-striped table-bordered table-list">  
                     <div id ="stud-table"></div>   
                     <thead >           	
                     <tr>
                         <th>Code</th>
                         <th>Name</th>
-                        <th ><em class="fa fa-cog"></em></th>
+                        <th class="cog-header"><em class="fa fa-cog"></em></th>
                     </tr>
                     </thead>   
 
@@ -40,7 +40,7 @@
                         <td>{{row.0}}</td>
                         <td>{{row.1}}</td>
 
-                        <td>
+                        <td align="center">
                             <!-- <a href="/update_college/{{row.0}}" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit{{row.0}}">Edit</a>
                             <a href="/delete_college/{{row.0}}" class="btn btn-danger btn-xs" onclick="return confirm('Are you sure to delete {{row.0}}?')">Delete</a> -->
                             <a href="/update_college/{{row.0}}" class="btn btn-warning" data-toggle="modal" data-target="#modaledit{{row.0}}"><em class="fa fa-pencil"></em></a>
