--- a/app/templates/course.html
+++ b/app/templates/course.html
@@ -23,15 +23,16 @@
                         {% endwith %}
 
 
-                <table class="table table-striped">
+                <table class="table table-striped table-bordered table-list">
                     <div id ="stud-table">
-
+                    <thead>
                     <tr>
                         <th>Course Code</th>
                         <th>Course Name</th>
                         <th>College</th>
-                        <th><em class="fa fa-cog"></em></th>
+                        <th class="cog-header"><em class="fa fa-cog"></em></th>
                     </tr>
+                    </thead>
 
                     {% for row in courses %}
 
@@ -41,7 +42,7 @@
                         <td>{{row.1}}</td>
                         <td>{{row.2}}</td>
 
-                        <td>
+                        <td align="center">
                             <!-- <a href="/update-course/{{row.0}}" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit{{row.0}}">Edit</a>
                             <a href="/delete_course/{{row.0}}" class="btn btn-danger btn-xs" onclick="return confirm('Are you sure to delete {{row.0}}?')">Delete</a> -->
                             <a href="/update-course/{{row.0}}" class="btn btn-warning" data-toggle="modal" data-target="#modaledit{{row.0}}"><em class="fa fa-pencil"></em></a>
