--- a/app/templates/student.html
+++ b/app/templates/student.html
@@ -4,9 +4,9 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-md-10 col-md-offset-1">
+                <div class="col md-12">
                     <h3>STUDENT LIST<button type="button" class="btn btn-success pull-right" data-toggle="modal" data-target="#mymodal">Add Data</button></h3>
-                    </div>
+        </div>
 
 
                     {% with messages = get_flashed_messages() %}
@@ -26,9 +26,10 @@
                         {% endwith %}
 
 
-                <table class="table table-striped">
+                <table class="table table-striped table-bordered table-list">
                     <div id ="stud-table">
-
+                    
+                    <thead>
                     <tr>
                         <th>ID Number</th>
                         <th>First Name</th>
@@ -36,8 +37,9 @@
                         <th>Course</th>
                         <th>Year Level</th>
                         <th>Gender</th>
-                        <th><em class="fa fa-cog"></em></th>
+                        <th class="cog-header"><em class="fa fa-cog"></em></th>
                     </tr>
+                </thead>
 
                     {% for row in students %}
 
@@ -50,7 +52,7 @@
                         <td>{{row.4}}</td>
                         <td>{{row.5}}</td>  
 
-                        <td>
+                        <td align="center">
                             <!-- <a href="/update/{{row.0}}" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit{{row.0}}">Edit</a>
                             <a href="/delete/{{row.0}}" class="btn btn-danger btn-xs" onclick="return confirm('Are you sure to delete {{row.1}} {{row.2}}?')">Delete</a> -->
                             <a href="/update/{{row.0}}" class="btn btn-warning" data-toggle="modal" data-target="#modaledit{{row.0}}"><em class="fa fa-pencil"></em></a>
