--- a/app/templates/student.html
+++ b/app/templates/student.html
@@ -36,18 +36,18 @@
                         <th>First Name</th>
                         <th>Last Name</th>
                         <th>Course</th>
+                        <th>College</th>
                         <th>Year Level</th>
                         <th>Gender</th>
                         <th class="cog-header"><em class="fa fa-cog"></em></th>
                     </tr>
                 </thead>
 
-                    {% for row in students %}
-
+                    {% for row in students %}                    
                         <tr id="studentRow{{row.0}}">
                         <td>
                             <div class="text-center">
-                                {% if row.6 %} {# Assuming row.6 contains the image URL #}
+                                {% if row.6 %}
                                     <img src="{{ row.6 }}" class="avatar img-circle img-thumbnail" alt="avatar" style="width: 50px; height: 50px;">
                                 {% else %}
                                     <img src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar img-circle img-thumbnail" alt="avatar" style="width: 50px; height: 50px;">
@@ -58,6 +58,17 @@
                         <td>{{row.1}}</td>
                         <td>{{row.2}}</td>
                         <td>{{row.3}}</td>
+                        <td>
+                            {% for course in courses %}
+                                {% if course.0 == row.3 %} 
+                                    {% for college in colleges %}
+                                        {% if college.0 == course.2 %} 
+                                        {{ course.2 }} ({{ college.1 }})
+                                        {% endif %}
+                                    {% endfor %}
+                                {% endif %}
+                            {% endfor %}
+                        </td>
                         <td>{{row.4}}</td>
                         <td>{{row.5}}</td>  
 
@@ -180,7 +191,8 @@
 
 
                             <div class="text-center">
-                                <img src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar img-circle img-thumbnail" alt="avatar">
+                                <!-- <img src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar img-circle img-thumbnail" alt="avatar"> -->
+                                <img src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar img-circle img-thumbnail" alt="avatar" style="width: 50px; height: 50px;">
                                 <h6>Upload a photo...</h6>
                                 <input type="file" class="text-center center-block file-upload" name="id_upload" accept="image/*">
                             </div></hr><br>
